# gestalt

./: .env.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY_ISSUES.md  SRC.md  STATE.md  swarm_bridge.py  vfs_evaluation_report.json  vfs_evaluation_test.py
.gitcore/: ARCHITECTURE.md  CHANGELOG.md  PROJECT_README.md  SRC.md  STATE.md  TODO.md  features.json
.gitcore/planning/: PLANNING.md  TASK.md
.github/issues/: .issue-mapping.json  FEATURE_agent_benchmark_leaderboard.md  IMPROVEMENT_vfs_binary_filewatcher.md  STATUS.md  TASK_jules_release_validation.md  TASK_jules_workflow_audit.md
.github/workflows/: agent-dispatcher.yml  benchmarks.yml  ci.yml  guardian-agent.yml  jules-auto-merge.yml  planner-agent.yml  release.yml
agent_benchmark/: README.md  __init__.py  __main__.py  adapters.py  api.py  runner.py  scoring.py  storage.py  tasks.py
benchmarks/tasks/: analysis_tradeoff_001.json  code_api_001.json  code_sum_001.json  debug_rust_001.json  docs_arch_001.json  planning_release_001.json  refactor_safety_001.json  security_cmd_001.json
docs/: KNOWN_ISSUES.md
docs/guides/: BUILD_STRATEGY.md  (+1 more)
gestalt_cli/: Cargo.toml
gestalt_core/: Cargo.toml
gestalt_infra_embeddings/: Cargo.toml
gestalt_infra_github/: Cargo.toml
gestalt_mcp/: Cargo.toml
gestalt_mcp/src/: bridge.rs  lib.rs  main.rs
gestalt_swarm/: Cargo.toml  README.md
gestalt_timeline/: Cargo.toml
gestalt_ui/: Cargo.toml
gestaltctl/: Cargo.toml
skills/: gestalt-swarm.md
synapse-agentic/: Cargo.toml
synapse-agentic/src/: lib.rs
(+56 files in other folders)
