[package]
name = "gestalt_mcp"
version = "1.0.0"
edition = "2021"

[lib]
name = "gestalt_mcp"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros", "ws"] }
tracing = "0.1"
anyhow = "1.0"
walkdir = "2.5"
reqwest = "0.12"
